--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:fitsSystemWindows="true"
-tools:openDrawer="start"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start"
     android:columnCount="2"
     android:rowCount="4"
-android:orientation="vertical"
-
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true"
+    android:alignmentMode="alignMargins"
     style="@style/DashTheme"
-tools:context="iann91.uw.tacoma.edu.myfridge.Dashboard.DashboardFragment">
+    tools:context="iann91.uw.tacoma.edu.myfridge.Dashboard.DashboardFragment">
 
 
 
@@ -20,79 +20,109 @@ tools:context="iann91.uw.tacoma.edu.myfridge.Dashboard.DashboardFragment">
     <ImageButton
         android:id="@+id/recipes_button"
         android:src="@drawable/recipesimagebutton"
-        android:scaleType="fitXY"
         android:background="@null"
         android:text="My Recipes"
-        android:layout_width="160dp"
-        android:layout_height="120dp" />
+        android:layout_row="0"
+        android:layout_column="0"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:scaleType="fitCenter"/>
 
     <ImageButton
         android:id="@+id/search_button"
         android:src="@drawable/searchrecipeimagebutton"
-        android:scaleType="fitXY"
         android:background="@null"
-        android:layout_gravity="left|top"
         android:text="Search Recipes"
-        android:layout_width="160dp"
-        android:layout_height="120dp" />
+        android:layout_row="0"
+        android:layout_column="1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:scaleType="fitCenter"/>
+    />
 
     <ImageButton
         android:id="@+id/inventory_button"
         android:src="@drawable/inventoryimagebutton"
-        android:scaleType="fitXY"
         android:background="@null"
-        android:layout_width="160dp"
-        android:layout_height="120dp"
         android:text="Inventory"
-        android:layout_gravity="left|top"
-        />
+        android:layout_row="1"
+        android:layout_column="0"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:scaleType="fitCenter"/>
+
+    />
 
 
     <ImageButton
         android:id="@+id/logout_button"
         android:src="@drawable/logout"
-        android:scaleType="fitXY"
         android:background="@null"
-        android:layout_width="160dp"
-        android:layout_height="120dp"
         android:text="Log Out"
-        android:layout_gravity="left|top"
-        />
+        android:layout_row="1"
+        android:layout_column="1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:scaleType="fitCenter"/>
+
+    />
     <ImageButton
         android:id="@+id/grocery_button"
         android:src="@drawable/grocerylistimagebutton"
-        android:scaleType="fitXY"
         android:background="@null"
-        android:layout_width="160dp"
-        android:layout_height="120dp"
         android:text="Grocery Lists"
-        />
+        android:layout_row="2"
+        android:layout_column="0"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:scaleType="fitCenter"/>
+
+    />
 
 
 
     <ImageButton
         android:id="@+id/plan_week_button"
         android:src="@drawable/weekplaniamgebutton"
-        android:scaleType="fitXY"
         android:background="@null"
-        android:layout_width="160dp"
-        android:layout_height="120dp"
         android:text="Plan Week"
-        android:layout_gravity="left|top"
-        />
+        android:layout_row="2"
+        android:layout_column="1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:scaleType="fitCenter"/>
+
+    />
 
     <ImageButton
         android:id="@+id/scanner_button"
         android:src="@drawable/scanimagebutton"
-        android:scaleType="fitXY"
         android:background="@null"
-        android:layout_width="160dp"
-        android:layout_height="120dp"
         android:text="Scanner"
-        android:layout_gravity="left|top"
-        />
+        android:layout_row="3"
+        android:layout_column="0"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:scaleType="fitCenter"/>
+
+    />
 
 </GridLayout>
+
 
 
 
